fixed issue where displayApi images where showing up on single line on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,6 @@ form button {
 }
 
 form button:focus, form button:hover {
-	/*outline: none;*/
 	background-color: #C2C5BB;
 }
 
@@ -93,7 +92,7 @@ input {
 }
 
 .results img {
-	padding: 5px;
+	padding-bottom: 10px;
 }
 
 .quote {
